2003-05-29  Bernhard Held <bernhard@bernhardheld.de>

	* src/pic/device.c: added 16F819, patch by "David I. Lehn" <dlehn@vt.edu>
	* src/SDCCcse.c (algebraicOpts): fixed "c * 1" 

2003-05-28  Bernhard Held <bernhard@bernhardheld.de>

	* doc/sdccman.lyx: fix double dash and other minor things
	* doc/Makefile: fix double dash

2003-05-28  Karl Bongers(patches from Martin Helmling)
	* debugger/mcs51/sdcdb.c,cmd.c,break.c and .h files. Martin adds
	  condition and ignore commands.

2003-05-28  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* doc/sdccman.lyx: Changes all over, index improved, smaller margins. The manual
	  is in parts still quite out of date, I did changes as far as I felt makes sense
	  for a non-native english speaker.
	  Please feel free to add to the manual or to correct my changes.
	* doc/Makefile: undid touching the date of intermediate tex files.

2003-05-26  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* doc/sdccman.lyx: Manual has an index now

2003-05-25  Bernhard Held <bernhard@bernhardheld.de>

	Finalize muluint/mulsint and mululong/mulslong merging:
	* device/lib/_mulint.c
	* device/lib/_mullong.c
	* device/lib/gbz80/mul.s
	* device/lib/gbz80/stubs.s
	* device/lib/z80/mul.s
	* device/lib/z80/stubs.s
	* src/SDCCsymt.c (initCSupport)

2003-05-24  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* as/mcs51/lkaomf51.c: Address space 'z' was missing.
	* src/avr/avr.dsp, src/ds390/ds390.dsp, src/mcs51/mcs51.dsp,
	  src/pic/pic.dsp, src/pic16/pic16.dsp, src/xa51/xa51.dsp,
	  src/x80/z80.dsp: peep.rul is bigger now, so /Zm1000 is used
	  instead of /Zm500.

2003-05-25  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/peeph.def: added rules 244.x, 245.x. Although they pass
          the regression tests I'm not brave enough to enable 245.b, 245.c
	* doc/sdccman.lyx: added latex preamble for hyperref package.
	  Using pdflatex this will give you a hyperlinked pdf file with